fix(combat): actor summary
* correct actor name not showing up on mouseover
* correct actor not being tinted after claiming a slot
* correct custom tracker not being fully disabled when the setting is disabled

#1862

--- a/styles/mandar.css
+++ b/styles/mandar.css
@@ -4219,7 +4219,7 @@ img {
 }
 
 .starwarsffg #combat-tracker .slot-claimed {
-  filter: grayscale(100%);
+  opacity: 20%;
 }
 .starwarsffg #combat-tracker .token-image.actor-header.defeated {
   filter: blur(1px) grayscale(50%);
